gccida/g2/resolve_unique_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/resolve_unique_section/src/varasm.c:971:6: error: use of undeclared identifier 'prefixes_18'
v7 = prefixes_18[v3][( BYTE2( decl->block.supercontext) & 8) != 0]; 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/resolve_unique_section/src/obj/varasm.o] Error 1
